@@ -1,6 +1,6 @@
 {
 	"name": "powerpack-lite-for-elementor",
-	"version": "1.3.0",
+	"version": "2.1.0",
 	"description": "Extend Elementor Page Builder with 50+ Creative Widgets.",
 	"keywords": [],
 	"author": "IdeaBox Creations",
